@@ -16,3 +16,5 @@ NDA_PROTOCOL
 NDA_NH_ID
 NDA_FDB_EXT_ATTRS
 NDA_FLAGS_EXT
+NDA_NDM_STATE_MASK
+NDA_NDM_FLAGS_MASK
